...
                        <viewControllerLayoutGuide type="bottom" id="dgD-OC-iAf"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="eMm-Di-e3M">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="image1" translatesAutoresizingMaskIntoConstraints="NO" id="lsO-HF-M1q" customClass="PictureMasterImageView" customModule="PictureViewMaster" customModuleProvider="target">
                                <rect key="frame" x="5" y="20" width="180" height="180"/>
                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <constraints>
                                    <constraint firstAttribute="width" secondItem="lsO-HF-M1q" secondAttribute="height" multiplier="1:1" id="ACP-48-fsq"/>
                                </constraints>
                                <userDefinedRuntimeAttributes>
...
